--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://upadhyaycomputers.github.io/smshssrisauli",
   "name": "the-first-best-school",
   "private": true,
   "version": "0.0.0",
